# tpay_test

./: .coveragerc  Dockerfile  READEME.md  README.md  Tpay Test.postman_collection.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: pyproject.toml  pytest.ini  requirements.txt
app/config/: settings.py  urls.py
app/config/settings/: base.py  dev.py  production.py
app/shop/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/shop/migrations/: 0001_initial.py
